--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vue-macros/volar": "^0.9.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "unplugin-vue-define-options": "^1.2.4",
         "vite": "^4.0.0",
         "vue": "^3.2.47"
     },
