--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@/*": ["resources/js/*"]
     },
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "allowJs": true
   },
   "exclude": ["node_modules", "public"]
 }
